# mooibanana_project

./: .dockerignore  .env.cloudwatch.example  .env.example  .gitignore  ADVERTISEMENT_PLACEMENTS.txt  CLOUDWATCH_SETUP.md  COMPREHENSIVE_TEST_CASES.txt  DISCOVER_PAGE_DOCUMENTATION.txt  Dockerfile  GMAIL_SETUP.md  LOGIN_REGISTRATION_AND_LIVE_UPDATES.txt  POINTS_AND_LIKES_SYSTEM.txt  README.md  REFERRAL_SYSTEM_DOCUMENTATION.txt  fix_timezones.py  index.html  main.py  manage.py  migrate_to_cloudinary.py  performance_optimizations.py  project_functionality_overview.txt  pyproject.toml  requirements.txt  sample_profiles.txt  start.sh  test_urls.py
.claude/: settings.local.json
accounts/: admin.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0003_populate_referral_codes.py  (+8 more)
admin_dashboard/: urls.py  views.py
advertisements/: admin.py  apps.py  models.py  urls.py  views.py
chat/: admin.py  models.py  urls.py  views.py
likes/: admin.py  models.py  urls.py  views.py
mooibanana_project/: asgi.py  settings.py  urls.py  wsgi.py
notifications/: admin.py  consumers.py  models.py  routing.py  urls.py  utils.py  views.py
payments/: admin.py  models.py  urls.py  views.py
profiles/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
quiz/: admin.py  models.py  urls.py  views.py
rewards/: admin.py  context_processors.py  models.py  urls.py  views.py
social/: admin.py  forms.py  models.py  urls.py  views.py
templates/: 404.html  500.html  base.html  home.html
updates/: admin.py  apps.py  models.py  urls.py  views.py
(+117 files in other folders)
