[project]
name = "mooibanana-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "channels==4.0.0",
    "channels-redis==4.1.0",
    "crispy-bootstrap5>=2025.6",
    "dj-database-url>=3.0.1",
    "django>=6.0",
    "django-cloudinary-storage>=0.3.0",
    "django-crispy-forms>=2.5",
    "django-debug-toolbar>=6.1.0",
    "django-redis>=6.0.0",
    "gunicorn>=23.0.0",
    "pillow>=12.0.0",
    "psycopg2-binary>=2.9.11",
    "python-decouple>=3.8",
    "redis>=7.1.0",
    "stripe>=14.0.1",
    "whitenoise>=6.11.0",
]
